--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1> git is a version control system</h1>
+        <h1> git is a version control system</h1>
     </body>
 </html>
